fix: Prevent accidental image dragging on desktops
...kinda, because somehow you can still do so after the first failed dragging attempt. At least the drag "preview" effect doesn't look as visible as the original effect.

--- a/src/main/webapp/assets/css/theme.css
+++ b/src/main/webapp/assets/css/theme.css
@@ -690,6 +690,7 @@ body {
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.5;
+  letter-spacing: -0.02rem;
   color: #424242;
   background-color: #FFFEFE;
   -webkit-text-size-adjust: 100%;
@@ -917,6 +918,8 @@ figure {
 img,
 svg {
   vertical-align: middle;
+  pointer-events: none;
+  user-select: none;
 }
 
 table {
